fixed backdrop covers the entire screen

--- a/public/scss/sections/_login-signup-modal.scss
+++ b/public/scss/sections/_login-signup-modal.scss
@@ -19,3 +19,7 @@
   margin-top: 7px;
   color: $accent-color;
 }
+
+.modal-backdrop{
+  z-index: 10;
+}
